<resources>
    <string name="app_name">QRcode Scanner</string>
    <string name="Annotsav">Annotsav</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SplashScreenActivity">Splash Screen Activity</string>
    <string name="AboutUs">About Us</string>
    <string name="ScanTicket">Scan Ticket</string>
    <string name="AdminLoginHere">Admin? Login Here</string>
    <string name="choose_file">Choose a CSV file to upload from...</string>
    <string name="choose">Choose</string>
    <string name="importBtn">Import</string>
    <string name="description1">The Rotary movement in Belgaum began with the formation of Rotary Club of Belgaum on the 5th of December 1941, with 18 members. Ours is the second oldest club of the RI District 3170, and also a leading club engaged in Community, Vocational and International service. After 77 years of continuous community service, our club has 93 members. There is a perfect mix of wisdom, maturity, youth and energy. This gives us immense courage and confidence to take up most challenging tasks.Let it be fellowship, leadership or a service project .</string>
    <string name="the_rotary_club_of_belgaum">The Rotary Club of Belgaum</string>
    <string name="about_annotsav">About Annotsav</string>
    <string name="description2">Annotsav The Food Festival, Consumex with Auto Expo Rotary Club of Belgaum is organizing Belgaum\'s Mega Event Annotsav for last 17 years. The Annotsav is organized at the CPEd Grounds, Camp, Belgaum (Opp Belgaum Club). This event has a 3 fold purpose: 1. To raise funds for community Service Projects. 2. To give an opportunity to the amateur as well as professional caterers to reach a wide audience. 3. To give Belgaumite’s a unique opportunity to taste variety of delicacies at one place and to entertain the entire family for 9 days.</string>
    <string name="logoDescription">Rotary Logo</string>
</resources>
