<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_view"
        android:text="@string/choose_file"
        android:padding="16dp"
        android:textSize="18dp"
        android:layout_marginTop="32dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filename_view"
        android:text=""
        android:textSize="20sp"
        android:padding="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/file_chooser_btn"
        android:text="@string/choose"
        android:padding="8dp"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/import_btn"
        android:text="@string/importBtn"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/qr_code_white"
        android:backgroundTint="@color/gold"
        />



</LinearLayout>