<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp"
        android:background="@color/green">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/rotary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Annotsav"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#fff"
            android:textSize="44sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp"
            android:layout_gravity="left">

            <Button
                android:id="@+id/ButtonInstructions"
                android:background="@drawable/buttonstyle"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AboutUs"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/lightgreen">
        <Button
            android:id="@+id/ButtonScan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ScanTicket"
            android:textColor="#fff"
            android:background="@drawable/buttonstyle"
            android:layout_margin="16dp"/>
        <TextView
            android:id="@+id/TextViewLogin"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AdminLoginHere"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>