<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purpleLighter"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/rotary"
        android:contentDescription="TODO" />
            <TextView

                android:paddingTop="24dp"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/the_rotary_club_of_belgaum"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <TextView
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description1"
                app:fontFamily="sans-serif" />

            <TextView
                android:paddingTop="24dp"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/about_annotsav"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <TextView
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description2"
                app:fontFamily="sans-serif"
                tools:text="@string/description1" />

</LinearLayout>